@@ -135,11 +135,11 @@ void          gimp_module_set_load_inhibit (GimpModule      *module,
 const gchar * gimp_module_state_name       (GimpModuleState  state);
 
 
-/*  supplement for missing GTypeModule API  */
-
+#ifndef GIMP_DISABLE_DEPRECATED
 GType         gimp_module_register_enum    (GTypeModule      *module,
                                             const gchar	     *name,
                                             const GEnumValue *const_static_values);
+#endif /* GIMP_DISABLE_DEPRECATED */
 
 
 /*  GimpModuleInfo functions  */
